--- a/index.html
+++ b/index.html
@@ -7,28 +7,31 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="javascript.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
     <div class="pozice">
         <div class="topnav" id="myTopnav">
             <a href="index.html">Úvodní stránka</a>
-            <a href="login.html">Přihlášení</a>
-            <a href="register.html">Registrace</a>
+            <a href="">Přihlášení</a>
+            <a href="">Registrace</a>
             <a href="Rezervace.html">Rezervace</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i> </a>
         </div>
     </div>
-    <main>
-        
-    </main>
+    <div class="cont-1">
+        <div class="headerH1">
+            <h1 class="txttt"> Barber Shop</h1>
+        </div>
+    </div>
+
     <footer>
-        <p> @Daniel Nováček 2023 <a href="spravcelogin.php">Správce</a> </p>
+        <p> @Daniel Nováček 2023 <a href="spravcelogin.php">Správce </a></p>
     </footer>
 </body>
 
